--- a/final_exercise/style.css
+++ b/final_exercise/style.css
@@ -14,16 +14,16 @@
 /* Navbar */
 
 nav {
+    display: block;
     padding: 1em;
-    margin-right: 10em;
-    margin-bottom: 0.5em;
 }
 
 nav ul {
+    display: flex;
     margin: 0;
     padding: 0;
-    display: flex;
-    align-items: center;
+    list-style-type: none;
+    float: right;
 }
 
 nav ul li {
@@ -33,11 +33,6 @@ nav ul li {
 nav ul li :hover {
     color: var(--secondary-color);
     transition: 0.2s;
-}
-
-nav ul li:first-child {
-    margin-right: auto;
-    margin-left: 10em;
 }
 
 nav button {
@@ -66,18 +61,51 @@ nav ul li a {
     text-decoration: none;
 }
 
-nav ul li .menu {
-    display: none;    
+nav .menu {
+    display: none;
 }
 
+/* Display menu link */
 @media screen and (max-width: 991px) {
-    nav ul li:not(:first-child) {display: none;}
-    nav ul li:nth-child(4) {display: flex;}
+    nav ul li {display: none;}
+    nav ul li:last-child {display: flex;}
     nav ul button {display: none;}
-    nav ul .menu {
-      display: flex !important;
-      color: var(--primary-color);
+    nav .menu {
+        color: var(--primary-color);
+        display: flex;
+        line-height: 2em;
+        padding: 0.2em 1.5em;
+        text-decoration: none;
+        justify-content: right;
+        float: right;
+    }
+}
 
+/* Display menu options */
+@media screen and (max-width: 991px) {
+    nav {
+        margin: 0;
+        width: 97vw;
+        padding: 0;
+    }
+    .navbar-responsive {
+        position: relative;
+    }
+    .navbar-responsive .menu {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .navbar-responsive ul {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+    .navbar-responsive li, .navbar-responsive button { 
+        display: inline-block;
+        width: 100%;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        text-align: center;
     }
 }
 
@@ -88,7 +116,7 @@ nav ul li .menu {
     background-position: center;
     background-size: cover;
     position: relative;
-    display:flex;
+    display: flex;
     flex-flow: column;
 }
 
@@ -110,6 +138,16 @@ nav ul li .menu {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    width: 100%;
+}
+
+@media (max-width: 991px) {
+    .flag-right {
+        width: 90%;
+        display: block; /* Stops it from floating */
+        margin: auto; /* Ensures that it is centered */
+        margin-bottom: 25px; /* Space between the stacked elements */
+    }
 }
 
 .flag-right img {
@@ -139,11 +177,18 @@ nav ul li .menu {
     transition: 0.2s;
 }
 
-
 .flag-left {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
+}
+
+@media (max-width: 991px) {
+    .flag-left {
+      float: left;
+      width: 50%;
+    }
 }
 
 /* Title */
