--- a/final_exercise/style.css
+++ b/final_exercise/style.css
@@ -138,15 +138,21 @@ nav .menu {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    width: 100%;
 }
 
 @media (max-width: 991px) {
     .flag-right {
-        width: 90%;
-        display: block; /* Stops it from floating */
-        margin: auto; /* Ensures that it is centered */
-        margin-bottom: 25px; /* Space between the stacked elements */
+        width: 100%;
+        display: flex; 
+        flex-direction: column;
+        align-items: center;
+        margin: auto; 
+        margin-bottom: 2em; 
+    }
+    .flag-right button {
+        display: flex;
+        margin: 0 auto;
+        margin-bottom: 2em;
     }
 }
 
@@ -181,13 +187,24 @@ nav .menu {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 100%;
 }
 
 @media (max-width: 991px) {
     .flag-left {
-      float: left;
-      width: 50%;
+        display: table; 
+        margin-left:auto; margin-right:auto; 
+        margin-bottom: 2em; 
+    }
+    .flag-left button {
+        display: flex;
+        margin: 0 auto;
+        margin-bottom: 2em;
+    }
+    .flag-left .first-div {
+        display: table-footer-group;
+    }
+    .flag-left .second-div {
+        display: table-header-group;
     }
 }
 
